--- a/pom.xml
+++ b/pom.xml
@@ -7,31 +7,33 @@
   <version>1.0-SNAPSHOT</version>
   <name>springExample-signUp Maven Webapp</name>
   <url>http://maven.apache.org</url>
+
   <dependencies>
     <!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
-<!-- 스프링 프레임 워크   -->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
-      <version>6.1.3</version>
+      <version>5.1.0.RELEASE</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/javax.servlet/jstl -->
-<!--    JSTL -->
+    <!-- JSTL Dependency -->
     <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>jstl</artifactId>
-      <version>1.2</version>
+      <groupId>javax.servlet.jsp.jstl</groupId>
+      <artifactId>javax.servlet.jsp.jstl-api</artifactId>
+      <version>1.2.1</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
-    <!--   자바  servlet -->
+    <dependency>
+      <groupId>taglibs</groupId>
+      <artifactId>standard</artifactId>
+      <version>1.1.2</version>
+    </dependency>
+    <!-- Servlet Dependency -->
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
-      <version>4.0.1</version>
+      <version>3.1.0</version>
       <scope>provided</scope>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/javax.servlet.jsp/javax.servlet.jsp-api -->
-<!--    JSP 의존성-->
+    <!-- JSP Dependency -->
     <dependency>
       <groupId>javax.servlet.jsp</groupId>
       <artifactId>javax.servlet.jsp-api</artifactId>
